--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "test": "npm test"
   },
   "author": "Korobeinikov Aleksei <koroqe@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
-    "truffle": "^4.1.8",
-    "zeppelin-solidity": "^1.9.0"
+
+    "openzeppelin-solidity": "^1.9.0",
+    "truffle": "^4.1.8"
   },
-  "license": "MIT"
+  "dependencies": {
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "babel-register": "^6.23.0",
+    "babel-preset-env": "^1.1.8"
+  }
 }
