--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
   "author": "Korobeinikov Aleksei <koroqe@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-
     "openzeppelin-solidity": "^1.9.0",
     "truffle": "^4.1.8"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "babel-register": "^6.23.0",
-    "babel-preset-env": "^1.1.8"
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
+    "web3": "^1.0.0-beta.34"
   }
 }
